build_cleanup_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources
> Task :app:mergeDebugResources
> Task :app:packageDebugResources
> Task :app:processDebugNavigationResources
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:parseDebugLocalResources
> Task :app:processDebugMainManifest
> Task :app:dataBindingGenBaseClassesDebug
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:validateSigningDebug UP-TO-DATE
> Task :app:writeDebugAppMetadata UP-TO-DATE
> Task :app:writeDebugSigningConfigVersions UP-TO-DATE
> Task :app:processDebugManifestForPackage
> Task :app:processDebugResources

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseAmountActivity.java:20: error: cannot find symbol
        MaterialButton btnConfirm = findViewById(R.id.btnConfirmAmount); // Verifying ID from layout (guessing common naming or checking)
                                                     ^
  symbol:   variable btnConfirmAmount
  location: class id
Note: C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\TransactionResultActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

[Incubating] Problems report is available at: file:///C:/Users/Laptop/AndroidStudioProjects/MySoftPOS/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseAmountActivity.java:20: error: cannot find symbol
          MaterialButton btnConfirm = findViewById(R.id.btnConfirmAmount); // Verifying ID from layout (guessing common naming or checking)
                                                       ^
    symbol:   variable btnConfirmAmount
    location: class id
  Note: C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\TransactionResultActivity.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
30 actionable tasks: 12 executed, 18 up-to-date
